fix: adjust customized label length, and show as tooltip when overflows

--- a/app/components/pipeline-graph-nav/styles.scss
+++ b/app/components/pipeline-graph-nav/styles.scss
@@ -97,5 +97,13 @@
     a {
       line-height: inherit;
     }
+
+    .customize-label {
+      display: inline-block;
+      text-overflow: ellipsis;
+      width: 130px;
+      white-space: nowrap;
+      overflow: hidden;
+    }
   }
 }
